--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
     <script>
         async function loadRoles() {
-            const response = await fetch('roles.json');
+            const response = await fetch('https://raw.githubusercontent.com/00SunRay00/SbtRules/refs/heads/main/roles.json');
             const roles = await response.json();
             const container = document.getElementById('roles-container');
             container.innerHTML = '';
