--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>SBT - Brawltown</title>
 </head>
 <body>
-  <p>Нормальная основная страница будет... когда нибуть.....</p>
-  <p lnk="https://00sunray00.github.io/SBT/roles">Роли</p>
-  <p lnk="https://00sunray00.github.io/SBT/rules">Правила сервера</p>
+  <p>Нормальная основная страница будет... когда-нибудь...</p>
+  <p><a href="https://00sunray00.github.io/SBT/roles">Роли</a></p>
+  <p><a href="https://00sunray00.github.io/SBT/rules">Правила сервера</a></p>
 </body>
 </html>
